grid: wide gap pointer-events fix

--- a/src/less/template/_grid.less
+++ b/src/less/template/_grid.less
@@ -88,10 +88,15 @@
 .grid(@xgap: 16px, @ygap: @xgap) {
 	.r();
 	margin: -@ygap -@xgap;
+	pointer-events: none;
 	
 	> * {
 		.c();
 		max-width: 100%;
 		padding: @ygap @xgap;
+		
+		& > * {
+			pointer-events: auto;
+		}
 	}
 }
